* BDirectory::CreateDirectory() and CreateSymlink() now both use __gUmask to   correct the permission mask. This fixes bug #2670. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27414 a95241bf-73f2-0310-859d-f6bbb57e9c96